feat(assistant): unify governed task execution runtime